gallery using data/gallery.yml

--- a/examplesite/data/gallery.yml
+++ b/examplesite/data/gallery.yml
@@ -1,1 +1,22 @@
 ShowHeader: false
+Images: 
+- Name: g1.png 
+  Alt: g1
+- Name: g2.png 
+  Alt: g2
+- Name: g3.png 
+  Alt: g3
+- Name: g4.png 
+  Alt: g4
+- Name: g5.png 
+  Alt: g6
+- Name: g7.png 
+  Alt: g8
+- Name: g9.png 
+  Alt: g9
+- Name: g10.png 
+  Alt: g10
+- Name: g11.png 
+  Alt: g11
+- Name: g12.png 
+  Alt: g12
