--- a/examplesite/data/faq.yml
+++ b/examplesite/data/faq.yml
@@ -4,7 +4,7 @@ Questions:
 -  Title: Do you do piercings? 
    Question: No we do not. We focus solely on tattooing.
 -  Title: How much is the shop minimum?
-   Question: Our basic shop miniumum is $80. $100 for hands, neck, face and head.
+   Question: Our basic shop miniumum is $100.
 -  Title: How much is it going to cost?
    Question: There are many factors involved in pricing. Size, placement,amount of detail, color VS. black and gray, line work only, lettering, amount of time, all of these things play a role in the overall cost of the tattoo. Each of our artists price differently.
 -  Title: Do I have to put down a deposit?
