parallax scrolling only on desktop

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "en-US"
-title = "Needle Me"
+title = "Behind The Scenez Tattooz"
 theme = "moderntattoo"
 
 [deployment]
