Added artists social links

--- a/data/artists.yml
+++ b/data/artists.yml
@@ -4,6 +4,11 @@ Artists:
     Slug: matt
     About:   Hey there, the name is Matt Maldonado and I have been in the art game since I could pick up a pencil. I am from the West Michigan area, Zeeland being where I came from. I am a tattoo artist who specializes in color or black and gray portraits/realism. Although that is my specialty my strengths also lie in color, pop-culture, Japanese and lettering. On top of tattooing I dabble in many other art forms such as graphic design, comic book illustration and digital or traditional illustration/painting. I’m super nerdy, super creative and hoping you choose me to make your next tattoo come to life! Stan Lee said it best...Excelsior!
     PortraitImageName: Matt.jpg
+    Instagram: https://www.instagram.com/darth_maldo
+    Twitter: http://www.twitter.com/darth_maldo
+    Youtube: https://www.youtube.com/channel/UCJdKKRAGfydGRHdCXkn8_iA
+    Facebook: https://www.facebook.com/darthmaldo
+    Website: https://www.darthmaldo.com/blog
     Images:
         - Name: M3.jpg
           Alt: Ugh
@@ -25,6 +30,7 @@ Artists:
     Slug: britta
     About:  My name is Britta Lindemulder and I’ve been tattooing in West Michigan since 2018. Ever since I can remember, I’ve always loved to draw. Many of my childhood friends still have doodles I made them. Growing up, my biggest influences were dinosaurs, sic-fi movies, video games and nature; which are still my interests today. I enjoy tattooing stylized illustrative linework, black and gray along with brightly colored pieces. My hair is also brightly colored, so you’ll never lose me in a crowd! I’m always learning and love to experiment with new art styles and subjects. I draw caricatures, illustrate and paint. My favorite thing about tattooing is collaborating with my clients to bring their ideas to life. I look forward to working with you and helping to make your tattoo dreams come true! 
     PortraitImageName: Britta.jpg
+    Instagram: https://www.instagram.com/britta_tattoos
     Images:
         - Name: B3.jpg
           Alt: Ugh
