--- a/data/artists.yml
+++ b/data/artists.yml
@@ -10,39 +10,47 @@ Artists:
     Facebook: https://www.facebook.com/darthmaldo
     Website: https://www.darthmaldo.com/blog
     Images:
-        - Name: M3.jpg
-          Alt: Ugh
+        - Name: chest-rose-geometric.jpg
+          Alt: gallery tattoo
         - Name: M4.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: M1.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: M14.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: M17.jpg
-          Alt: Ugh
-        - Name: M15.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: M18.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
+        - Name: M3.jpg
+          Alt: gallery tattoo
+        - Name: heart-rose-sleeve.jpg
+          Alt: gallery tattoo
+        - Name: lion-shoulder.jpg
+          Alt: gallery tattoo
+        - Name: baby-yoda.jpg
+          Alt: gallery tattoo
 
 -   Name: Britta
     FullName: Britta Lindemulder
     Slug: britta
-    About:  My name is Britta Lindemulder and I’ve been tattooing in West Michigan since 2018. Ever since I can remember, I’ve always loved to draw. Many of my childhood friends still have doodles I made them. Growing up, my biggest influences were dinosaurs, sic-fi movies, video games and nature; which are still my interests today. I enjoy tattooing stylized illustrative linework, black and gray along with brightly colored pieces. My hair is also brightly colored, so you’ll never lose me in a crowd! I’m always learning and love to experiment with new art styles and subjects. I draw caricatures, illustrate and paint. My favorite thing about tattooing is collaborating with my clients to bring their ideas to life. I look forward to working with you and helping to make your tattoo dreams come true! 
+    About:  My name is Britta Lindemulder and I’ve been tattooing in West Michigan since 2018. Ever since I can remember, I’ve always loved to draw. Many of my childhood friends still have doodles I made them. Growing up, my biggest influences were dinosaurs, sci-fi movies, video games and nature; which are still my interests today. I enjoy tattooing stylized illustrative linework, black and gray along with brightly colored pieces. My hair is also brightly colored, so you’ll never lose me in a crowd! I’m always learning and love to experiment with new art styles and subjects. I draw caricatures, illustrate and paint. My favorite thing about tattooing is collaborating with my clients to bring their ideas to life. I look forward to working with you and helping to make your tattoo dreams come true! 
     PortraitImageName: Britta.jpg
     Instagram: https://www.instagram.com/britta_tattoos
     Images:
         - Name: B3.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B4.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B1.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B14.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B17.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B15.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
         - Name: B18.jpg
-          Alt: Ugh
+          Alt: gallery tattoo
+        - Name: B20.jpg
+          Alt: gallery tattoo
