facebook for britta, changed artist links to open in new tab

--- a/data/artists.yml
+++ b/data/artists.yml
@@ -37,6 +37,7 @@ Artists:
     About:  My name is Britta Lindemulder and I’ve been tattooing in West Michigan since 2018. Ever since I can remember, I’ve always loved to draw. Many of my childhood friends still have doodles I made them. Growing up, my biggest influences were dinosaurs, sci-fi movies, video games and nature; which are still my interests today. I enjoy tattooing stylized illustrative linework, black and gray along with brightly colored pieces. My hair is also brightly colored, so you’ll never lose me in a crowd! I’m always learning and love to experiment with new art styles and subjects. I draw caricatures, illustrate and paint. My favorite thing about tattooing is collaborating with my clients to bring their ideas to life. I look forward to working with you and helping to make your tattoo dreams come true! 
     PortraitImageName: Britta.jpg
     Instagram: https://www.instagram.com/britta_tattoos
+    Facebook: https://facebook.com/Britta.tattoos
     Images:
         - Name: B3.jpg
           Alt: gallery tattoo
